cluster/apps/external/nas.yml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - protocol: TCP
      port: 5001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.1.3
    ports:
      - port: 5001
---
