cluster/apps/external/plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.4
    ports:
      - port: 32400
---
