cluster/apps/external/nas-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "nas.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-nas
spec:
  tls:
  - hosts:
    - "nas.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: nas.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nas
              port:
                number: 5001
