cluster/apps/external/overseerr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "overseerr.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-http
spec:
  tls:
  - hosts:
    - "overseerr.${SECRET_DOMAIN}"
    secretName: ca-overseerr-tls
  ingressClassName: "nginx"
  rules:
  - host: overseerr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: overseerr
              port:
                number: 5055
