cluster/apps/external/plex-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "plex.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-plex
spec:
  tls:
  - hosts:
    - "plex.${SECRET_DOMAIN}"
    secretName: ca-plex-tls
  ingressClassName: "nginx"
  rules:
  - host: plex.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: plex
              port:
                number: 32400
